# frm2png

./: .gitignore  .gitmodules  CHANGELOG.md  README.md
.github/workflows/: Build.yml
Source/: .clang-format  CMake.Linux32  CMakeLists.txt  ClangFormat.sh  ColorPal.cpp  ColorPal.h  Exception.cpp  Exception.h  Logging.cpp  Logging.h  PngGenerator.cpp  PngGenerator.h  PngImage.cpp  PngImage.h  PngWriter.cpp  PngWriter.h  frm2png.cpp
Source/libfalltergeist-mini/: CMakeLists.txt  README.md
Source/libfalltergeist-mini/Format/Dat/: Entry.cpp  Entry.h  File.cpp  Item.cpp  MiscFile.cpp  MiscFile.h  Stream.cpp  Stream.h
Source/libfalltergeist-mini/Format/Frm/: Direction.cpp  Direction.h  File.cpp  File.h  Frame.cpp  Frame.h
Source/libfalltergeist-mini/Format/Pal/: Color.cpp  Color.h  File.cpp  File.cpp~RF9019cd1.TMP  File.h
src/: CMakeLists.txt  ColorPal.cpp  ColorPal.h  PngImage.h  PngWriter.cpp  PngWriter.h  main.cpp
src/libfalltergeist-mini/: CMakeLists.txt
src/libfalltergeist-mini/Format/: Enums.h
src/libfalltergeist-mini/Format/Dat/: File.h  Item.h  Stream.cpp
src/libfalltergeist-mini/Format/Frm/: Direction.cpp  Direction.h  File.cpp  Frame.cpp
src/libfalltergeist-mini/Format/Pal/: Color.cpp  File.cpp  File.h
